bundles/org.eclipse.rap.rwt/widgetkits/org/eclipse/swt/internal/widgets/compositekit/Composite.default.css
/*******************************************************************************
 * Copyright (c) 2009, 2012 EclipseSource and others.
 * All rights reserved. This program and the accompanying materials
 * are made available under the terms of the Eclipse Public License v1.0
 * which accompanies this distribution, and is available at
 * http://www.eclipse.org/legal/epl-v10.html
 *
 * Contributors:
 *    EclipseSource - initial API and implementation
 ******************************************************************************/

/* Composite property defaults */

Composite {
  padding: 0;
  opacity: 1;
  background-color: #ffffff;
  background-image: none;
  border: none;
  border-radius: 0;
  box-shadow: none;
}

Composite[BORDER] {
  border: 1px solid #aaaaaa;
}

